# blender_core

./: .gitignore  3.6.4.txt  CMakeCache.txt  CMakeLists.txt  GNUmakefile  buildOrder.txt  install.sh  userAndName.txt
build_files/build_environment/: CMakeLists.txt
build_files/build_environment/cmake/: openexr.cmake
build_files/cmake/config/: blender_headless.cmake
build_files/cmake/platform/: platform_unix.cmake
openexrstatic/: CMakeLists.txt
openexrstatic/src/: dummy.cpp
source/blender/render/: CMakeLists.txt
source/blender/windowmanager/: CMakeLists.txt
source/wasm/: CMakeLists.txt  creator.cc
